# ============================================================================ #
# Copyright (c) 2022 - 2025 NVIDIA Corporation & Affiliates.                   #
# All rights reserved.                                                         #
#                                                                              #
# This source code and the accompanying materials are made available under     #
# the terms of the Apache License 2.0 which accompanies this distribution.     #
# ============================================================================ #

[project]
name = "cudaq-qec"
dynamic = ["version", "dependencies", "optional-dependencies"]
keywords = [ "qec", "cudaq", "cuda-quantum", "cuda", "quantum", "quantum computing", "nvidia", "high-performance computing" ]
description = "Accelerated libraries for Quantum Error Correction built on CUDA-Q"
authors = [{name = "NVIDIA Corporation & Affiliates"}]
maintainers = [{name = "NVIDIA Corporation & Affiliates"}]
readme = "README.md"
requires-python = ">=3.11"
license-files = [ "LICENSE", "NOTICE", "CITATION.cff" ]
classifiers = [
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: GPU :: NVIDIA CUDA :: 12",
    "Environment :: GPU :: NVIDIA CUDA :: 13",
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
]

[project.urls]
Homepage = "https://nvidia.github.io/cudaqx"
Documentation = "https://nvidia.github.io/cudaqx/components/qec/introduction.html"
Repository = "https://github.com/NVIDIA/cudaqx"

[build-system]
requires = ["setuptools", "nvidia-ml-py"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
include-package-data = true

[tool.setuptools.dynamic]
version = {file = "_version.txt"}

